[metadata]
name = uigenie
version = 0.0.1
url = https://flask.palletsprojects.com/tutorial/
license = MIT
maintainer = Derek Kinzo
maintainer_email = dhk891@g.harvard.edu
description = Front end webapp for genie, gene-disease trend detection app
long_description = file: README.rst
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    uigenie